# game-off-2023

./: .gitignore  Cargo.toml  index.html  readme.md  shell.nix
.github/workflows/: deploy-ghpage.yaml
assets/: Intro.ase  Level_0.ase  Zone_1.ase  Zone_2.ase  Zone_3.ase  bird.aseprite  boss_1.ase  boss_1_eye.aseprite  boss_2.ase  boss_2_eye.ase  collision.ase  final_boss.ase  frame.ase  heart.aseprite  hero.ase  hero_L.aseprite  hero_M.ase  hero_S.aseprite  old_guy.ase  platform.aseprite  tileset.ase  world.aseprite  zombie_2_L.ase  zombie_S.ase
assets/level-collisions/: Level_0.collision.json  Level_1.collision.json
assets/tilemaps/: sample.ldtk  world.ldtk
src/: level_collision_data.rs  main.rs  music.rs  parameters.rs  params.rs  util.rs
src/definitions/: colliders.rs  cutscenes.rs  mod.rs
src/entities/: animation.rs  bird.rs  boss_1.rs  boss_2.rs  boss_3.rs  checkpoint.rs  common.rs  damage_zone.rs  entity_spawner.rs  image_entity.rs  mod.rs  old_guy.rs  platform.rs  player.rs  player_sensor.rs  spawner.rs  wall.rs  zombie.rs
src/graphics/: hurt.rs  mod.rs  palette.rs  particles.rs  text.rs  transition.rs
src/logic/: attack.rs  collision.rs  cutscene.rs  data.rs  hearts.rs  hit_stop.rs  knockback.rs  level_loading.rs  mod.rs  movement.rs  swords_disappear.rs  vanish.rs
src/screens/: game.rs  loading.rs  mod.rs  text.rs  title.rs
